smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object1.smithy
// Parse error at line 4, column 8 near `MyString`: Expected RPAREN())
namespace com.foo
@foo(
string MyString
